[gd_scene load_steps=8 format=3 uid="uid://d028ajclojpaf"]

[ext_resource type="Script" path="res://scripts/brush_holder.gd" id="1_2lwx8"]
[ext_resource type="PackedScene" uid="uid://godbdombfd53" path="res://scenes/main/table_scene.tscn" id="2_3r25n"]
[ext_resource type="PackedScene" uid="uid://cbmf6j5g2ft2p" path="res://scenes/main/brush.tscn" id="3_fqbn5"]
[ext_resource type="AudioStream" uid="uid://blgh31su1hn7i" path="res://assets/sfx/brush_pick_up.mp3" id="4_fpf66"]
[ext_resource type="AudioStream" uid="uid://b3oi1htnga8a0" path="res://assets/sfx/brush_put_down.mp3" id="5_cdf15"]

[sub_resource type="BoxShape3D" id="BoxShape3D_018ig"]
size = Vector3(0.955977, 0.603876, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fp71v"]
size = Vector3(2.49158, 1.17298, 2.76769)

[node name="BrushHolder" type="StaticBody3D"]
script = ExtResource("1_2lwx8")

[node name="table" parent="." instance=ExtResource("2_3r25n")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00357866, 0.292306, 0)
shape = SubResource("BoxShape3D_018ig")

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.45)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.020433, 0.556856, -0.768563)
shape = SubResource("BoxShape3D_fp71v")

[node name="PromptLabel" type="Label3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.534814, -0.9)
visible = false
text = "[E] Pick up brush"

[node name="Brush" parent="." instance=ExtResource("3_fqbn5")]
transform = Transform3D(-0.822526, -0.000213115, 0.568727, -7.50824e-05, 1, 0.000266139, -0.568727, 0.000176208, -0.822526, 0, 0.586279, 0)

[node name="BrushPickupAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586504, 0)
stream = ExtResource("4_fpf66")

[node name="BrushPutDownAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586504, 0)
stream = ExtResource("5_cdf15")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_body_exited"]
